--- a/CSS/style.css
+++ b/CSS/style.css
@@ -30,25 +30,50 @@ html{
 head .icon-head{
     border-radius: 10%;
 }
+
+
+/*-------Header---------*/
 header{
     position: fixed;
     top: 0; left: 0; right: 0;
     background-color: #333;
     z-index: 1000;
     display: flex;
+    flex-wrap: wrap;    
     align-items: center;
+    flex-direction: row;
     justify-content: space-between;
     padding: 1px 25px;
 
 }
-header .logo{
+
+/*---------Left Header----------*/
+header .left-header{
+    width: 200px;
+}
+header .left-header .tooltip-logo{
+    visibility: hidden;
+    background-color: gray;
+    color: white;
+    padding: 4px 8px ;
+    border-radius: 2px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 13px;
+    transition: visibility 150ms linear;
+    pointer-events: none;
+    white-space: nowrap;
+}
+header .left-header:hover .tooltip-logo{
+    visibility: visible;
+}
+header .left-header .logo{
     font-size: 2.5rem;
     font-weight: bolder;
     color: #fff;
     text-transform: uppercase;
     text-align: center;
 }
-header .logo span{
+header .left-header .logo span{
     
     padding: -5px 0 -10px 0;
     margin: -5px 0 -10px 0;
@@ -65,35 +90,71 @@ header .logo span{
         5px 5px 0px #6868AC, 
         6px 6px 0px #90B1E0;
 }
-header .navbar a{
-    color: #fff;
-    font-size: 2rem;
-    margin: 0 .9rem;
-}
-header .navbar a:hover{
-    color: #fb989c;
-}
-header .icons{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
 
-/*---------left-icon---------*/
-header .icons .left-icon{
-    margin-right: 2rem;
+/*---------Middle Header----------*/
+header .middle-header .navbar ul{
+    display: flex;
+    justify-content: center;
 }
-header .icons .left-icon i{
+header .middle-header .navbar li{
+    list-style: none;
+}
+header .middle-header .navbar a{
+    color: #fff;
+    background-color: transparent;
+    border-radius: 20px;
+    /* background-color: #333; */
+    font-size: 2.2rem;
+    letter-spacing: 0.06em;
+    font-weight: 600;
+    margin: 0 1.2rem;
+    transition: background-color box-shadow padding 2s ease-in;
+    transition: letter-spacing transform 2s linear(0 0%, 0.22 2.1%, 0.86 6.5%, 1.11 8.6%, 1.3 10.7%, 1.35 11.8%, 1.37 12.9%, 1.37 13.7%, 1.36 14.5%, 1.32 16.2%, 1.03 21.8%, 0.94 24%, 0.89 25.9%, 0.88 26.85%, 0.87 27.8%, 0.87 29.25%, 0.88 30.7%, 0.91 32.4%, 0.98 36.4%, 1.01 38.3%, 1.04 40.5%, 1.05 42.7%, 1.05 44.1%, 1.04 45.7%, 1 53.3%, 0.99 55.4%, 0.98 57.5%, 0.99 60.7%, 1 68.1%, 1.01 72.2%, 1 86.7%, 1 100%);
+}
+header .middle-header .navbar a:hover{
+    background-color: #fea2a5;
+    padding: 2px 15px;
+    letter-spacing: 0.12em;
+    transform: scale(1.5);
+    box-shadow: 0 0 25px #fb989c;
+}
+/* header .middle-header .navbar a::before{
+    content: ' ';
+    position: absolute;
+    inset: 1px;
+    background-color: #333;
+} 
+header .middle-header .navbar a span{
+    position: relative;
+    z-index: 1;
+}*/
+
+/*----------Right Header-----------*/
+header  .right-header{
+    display: flex;
+    flex-wrap: wrap;    
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 1px 25px;
+    gap: 35px;
+
+}
+/*---------left-icon---------*/
+/* header .right-header .left-icon{
+    margin-right: 2rem;
+} */
+header .right-header .left-icon i{
     color: #fff;
     font-size: 2.5rem;
     cursor: pointer; 
     margin-top: 3.7px;
     margin-left: 2.6px; 
 }
-header .icons .left-icon i:hover{
+header .right-header .left-icon i:hover{
     color: #fb989c;
 }
-header .icons .left-icon form{
+header .right-header .left-icon .search-bar-container{
     position: relative;
     /* margin-top: 21px; */
     /* top: 50%;
@@ -109,7 +170,7 @@ header .icons .left-icon form{
     border: 4px solid white;
     padding: 5px;
 }
-header .icons .left-icon input{
+header .right-header .left-icon input{
     position: absolute;
     top: 10%;
     left: 0;
@@ -122,10 +183,9 @@ header .icons .left-icon input{
     font-size: 1.7em;
     border-radius: 20px;
     padding: 0 20px;
-    
     /* transition: all 800ms cubic-bezier(0.18, 0.89, 0.32, 1.28); */
 }
-header .icons .left-icon .fa{
+header .right-header .left-icon .search-bar-container .fa{
     box-sizing: border-box;
     padding: 10px;
     width: 42.5px;
@@ -138,31 +198,37 @@ header .icons .left-icon .fa{
     text-align: center;
     font-size: 1.2em;
     /* transition: all 800ms cubic-bezier(0.18, 0.89, 0.32, 1.28); */
-    /* transition: all 0.2s linear(0 0%, 0.22 2.1%, 0.86 6.5%, 1.11 8.6%, 1.3 10.7%, 1.35 11.8%, 1.37 12.9%, 1.37 13.7%, 1.36 14.5%, 1.32 16.2%, 1.03 21.8%, 0.94 24%, 0.89 25.9%, 0.88 26.85%, 0.87 27.8%, 0.87 29.25%, 0.88 30.7%, 0.91 32.4%, 0.98 36.4%, 1.01 38.3%, 1.04 40.5%, 1.05 42.7%, 1.05 44.1%, 1.04 45.7%, 1 53.3%, 0.99 55.4%, 0.98 57.5%, 0.99 60.7%, 1 68.1%, 1.01 72.2%, 1 86.7%, 1 100%); */
 }
-header .icons .left-icon form:hover{
+header .right-header .left-icon .search-bar-container:hover{
     width: 300px;
     cursor: pointer;
 }
-header .icons .left-icon form:hover input{
+header .right-header .left-icon .search-bar-container:hover input{
     display: block;
     animation-fill-mode: forwards;
 }
-
-header .icons .left-icon form:hover .fa{
+header .right-header .left-icon .search-bar-container:hover .fa{
     background: #8c52ff;
     color: white;
 }
-
 /*-----------right-icon-------------*/
-header .icons .right-icon{
-    margin-left: 2rem;
+header .right-header .right-icon{
+    width: 50px;
+    height: 50px;
+    /* transition: border border-radius 100ms linear; */
+    transition: all 4s linear(0 0%, 0.22 2.1%, 0.86 6.5%, 1.11 8.6%, 1.3 10.7%, 1.35 11.8%, 1.37 12.9%, 1.37 13.7%, 1.36 14.5%, 1.32 16.2%, 1.03 21.8%, 0.94 24%, 0.89 25.9%, 0.88 26.85%, 0.87 27.8%, 0.87 29.25%, 0.88 30.7%, 0.91 32.4%, 0.98 36.4%, 1.01 38.3%, 1.04 40.5%, 1.05 42.7%, 1.05 44.1%, 1.04 45.7%, 1 53.3%, 0.99 55.4%, 0.98 57.5%, 0.99 60.7%, 1 68.1%, 1.01 72.2%, 1 86.7%, 1 100%);
 }
-header .icons .right-icon i{
+header .right-header .right-icon:hover{
+    border: solid 4px #fff;
+    background-image: linear-gradient(to top, #fe8589 0%, #e56ec0 99%, #f372ca 100%);
+    border-radius: 50%;
+}
+header .right-header .right-icon i{
     color: #fff;
-    font-size: 2.5rem;
+    position: relative;
+    font-size: 3.1rem;
     cursor: pointer;  
-}
-header .icons .right-icon i:hover{
-    color: #fb989c;
+    top: 8px;
+    right: -7px;
+    
 }
